[project]
name = "GoogleCalDavExample"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Satanovskii",email = "morozvktv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google (>=3.0.0,<4.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "caldav (>=1.4.0,<2.0.0)",
    "keyring (>=25.6.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
